--- a/Intermediate Front End Development Projects/wikipediaApi.html
+++ b/Intermediate Front End Development Projects/wikipediaApi.html
@@ -18,6 +18,7 @@ $(document).ready(function() {
     window.open('https://en.wikipedia.org/wiki/Special:Random');
   });
 
+  // click on the serach button if you press enter
   $("#input").keyup(function(event){
       if(event.keyCode == 13){
           $("#search").click();
