finnished the css, added borders, changed colors, etc

--- a/Intermediate Front End Development Projects/twitchAPI.html
+++ b/Intermediate Front End Development Projects/twitchAPI.html
@@ -112,16 +112,16 @@ function compare(a,b) {
     <div class = "row text-center">
 
       <div class = "col-xs-12  ">
-        <h1>Twitch API</h1>
+        <h1>Twitch Streams</h1>
       </div>
 
     </div>
     <!-- real css is higher up on line 57 -->
     <div class = "row text-center">
       <!--  target div for the logo -->
-      <div class = "col-xs-4 nopadding" id="targetImage">Image </div>    
+      <div class = "col-xs-4 nopadding" id="targetImage"></div>
       <!--  target div for the stream info-->
-      <div class = "col-xs-8 nopadding" id="targetInfo">Info</div>
+      <div class = "col-xs-8 nopadding" id="targetInfo"></div>
 
 
 
