added some minor stryling to the quote machine

--- a/Intermediate Front End Development Projects/quotemachine.html
+++ b/Intermediate Front End Development Projects/quotemachine.html
@@ -49,7 +49,7 @@ $(document).ready(function() {
   <div class="container well" >
     <div class = "row text-center">
       <div class = "col-xs-12  ">
-        <h2>Random quote machine</h2>
+        <h2>Quote machine</h2>
       </div>
 
     </div>
@@ -63,7 +63,7 @@ $(document).ready(function() {
 
         <button id = "getMessage" class = "btn btn-primary" type="button">  Get Quote </button>
 
-       <button id = "twitter" class="twitter" type ="button"><i class="fa fa-twitter" aria-hidden="true"></i></button>
+       <button id = "twitter" class="twitter pull-right" type ="button"><i class="fa fa-twitter" aria-hidden="true"></i></button>
 
       </div>
     </div>
