--- a/AdvancedFrontEndDevelipmentProjects/calculator.html
+++ b/AdvancedFrontEndDevelipmentProjects/calculator.html
@@ -1,18 +1,127 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>title</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="jquery-3.1.1.min.js"></script>
-    <script src="script.js"></script>
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="calculator" content="">
+    <meta name="Sami Peralahti" content="">
+
+
+    <title>Javascript Calculator</title>
+
+    <!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<link rel="stylesheet" href="css/calculator.css" >
+
   </head>
+
   <body>
 
 
 
+    <div class="container theme-showcase" role="main">
 
+      <!-- Main jumbotron for a primary marketing message or call to action -->
+
+
+      <div class="page-header">
+        <h1>Buttons</h1>
+      </div>
+
+
+
+
+
+
+      <div class="row text-center">
+        <div class="col-sm-12">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Javascript Calculator</h3>
+            </div>
+            <div class="panel-body text-right">
+              0
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row text-center">
+        <div class="col-xs-3">
+
+          <p>
+            <button type="button" class="btn btn-lg btn-default">L</button>
+            <button type="button" class="btn btn-lg btn-default">L</button>
+            <button type="button" class="btn btn-lg btn-primary">L</button>
+            <button type="button" class="btn btn-lg btn-success">L</button>
+          </p>
+
+        </div>
+
+        <div class="col-xs-3">
+
+          <p>
+            <button type="button" class="btn btn-lg btn-default">M</button>
+            <button type="button" class="btn btn-lg btn-default">M</button>
+            <button type="button" class="btn btn-lg btn-primary">M</button>
+            <button type="button" class="btn btn-lg btn-success">M</button>
+          </p>
+
+        </div>
+
+        <div class="col-xs-3">
+
+          <p>
+            <button type="button" class="btn btn-lg btn-default">M</button>
+            <button type="button" class="btn btn-lg btn-default">M</button>
+            <button type="button" class="btn btn-lg btn-primary">M</button>
+            <button type="button" class="btn btn-lg btn-success">M</button>
+          </p>
+
+        </div>
+
+        <div class="col-xs-3">
+
+          <p>
+            <button type="button" class="btn btn-lg btn-default">R</button>
+            <button type="button" class="btn btn-lg btn-default">R</button>
+            <button type="button" class="btn btn-lg btn-primary long">R</button>
+          </p>
+
+        </div>
+
+
+
+
+
+      </div>
+
+
+
+
+
+    </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../assets/js/docs.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
