--- a/AdvancedFrontEndDevelipmentProjects/calculator.html
+++ b/AdvancedFrontEndDevelipmentProjects/calculator.html
@@ -33,25 +33,23 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
 
+        <div class="row text-center">
 
-      <div class="page-header">
-        <h1>Buttons</h1>
+        <div class="col-sm-12">
+          <h3>Javascript Calculator</h3>
+        </div>
+
       </div>
-
-
-
-
-
-
       <div class="row text-center">
+
         <div class="col-sm-12">
           <div class="panel panel-default">
-            <div class="panel-heading">
-              <h3 class="panel-title">Javascript Calculator</h3>
-            </div>
+
             <div class="panel-body text-right">
-              0
+              <p class="top-panel">0</p>
+              <p class="bottom-panel">0</p>
             </div>
+
           </div>
         </div>
       </div>
@@ -61,10 +59,11 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-default">L</button>
-            <button type="button" class="btn btn-lg btn-default">L</button>
-            <button type="button" class="btn btn-lg btn-primary">L</button>
-            <button type="button" class="btn btn-lg btn-success">L</button>
+            <button type="button" class="btn btn-lg btn-primary">AC</button>
+            <button type="button" class="btn btn-lg btn-info">7</button>
+            <button type="button" class="btn btn-lg btn-info">4</button>
+            <button type="button" class="btn btn-lg btn-info">1</button>
+            <button type="button" class="btn btn-lg btn-info wide">0</button>
           </p>
 
         </div>
@@ -72,10 +71,11 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-default">M</button>
-            <button type="button" class="btn btn-lg btn-default">M</button>
-            <button type="button" class="btn btn-lg btn-primary">M</button>
-            <button type="button" class="btn btn-lg btn-success">M</button>
+            <button type="button" class="btn btn-lg btn-primary">CE</button>
+            <button type="button" class="btn btn-lg btn-info">8</button>
+            <button type="button" class="btn btn-lg btn-info">5</button>
+            <button type="button" class="btn btn-lg btn-info">2</button>
+
           </p>
 
         </div>
@@ -83,10 +83,11 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-default">M</button>
-            <button type="button" class="btn btn-lg btn-default">M</button>
-            <button type="button" class="btn btn-lg btn-primary">M</button>
-            <button type="button" class="btn btn-lg btn-success">M</button>
+            <button type="button" class="btn btn-lg btn-primary">%</button>
+            <button type="button" class="btn btn-lg btn-info">9</button>
+            <button type="button" class="btn btn-lg btn-info">6</button>
+            <button type="button" class="btn btn-lg btn-info">3</button>
+            <button type="button" class="btn btn-lg btn-info">.</button>
           </p>
 
         </div>
@@ -94,9 +95,10 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-default">R</button>
-            <button type="button" class="btn btn-lg btn-default">R</button>
-            <button type="button" class="btn btn-lg btn-primary long">R</button>
+            <button type="button" class="btn btn-lg btn-primary">X</button>
+            <button type="button" class="btn btn-lg btn-primary">-</button>
+            <button type="button" class="btn btn-lg btn-primary">+</button>
+            <button type="button" class="btn btn-lg btn-success long">=</button>
           </p>
 
         </div>
@@ -106,7 +108,6 @@
 
 
       </div>
-
 
 
 
