--- a/AdvancedFrontEndDevelipmentProjects/calculator.html
+++ b/AdvancedFrontEndDevelipmentProjects/calculator.html
@@ -12,7 +12,13 @@
 
     <title>Javascript Calculator</title>
 
-    <!-- Latest compiled and minified CSS -->
+
+<!-- jqery -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<!-- my js -->
+<script src="js/calculator.js"></script>
+
+<!-- Latest compiled and minified CSS bootstrap -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -21,7 +27,9 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="css/calculator.css" >
+<!-- my css -->
+<link rel="stylesheet" href="css/calculator.css">
+
 
   </head>
 
@@ -59,11 +67,11 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-primary">AC</button>
-            <button type="button" class="btn btn-lg btn-info">7</button>
-            <button type="button" class="btn btn-lg btn-info">4</button>
-            <button type="button" class="btn btn-lg btn-info">1</button>
-            <button type="button" class="btn btn-lg btn-info wide">0</button>
+            <button type="button" class="btn btn-lg btn-primary" id ="ac">AC</button>
+            <button type="button" class="btn btn-lg btn-info"id ="7">7</button>
+            <button type="button" class="btn btn-lg btn-info"id ="4">4</button>
+            <button type="button" class="btn btn-lg btn-info" id="1">1</button>
+            <button type="button" class="btn btn-lg btn-info wide" id ="0">0</button>
           </p>
 
         </div>
@@ -71,10 +79,10 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-primary">CE</button>
-            <button type="button" class="btn btn-lg btn-info">8</button>
-            <button type="button" class="btn btn-lg btn-info">5</button>
-            <button type="button" class="btn btn-lg btn-info">2</button>
+            <button type="button" class="btn btn-lg btn-primary" id ="ce">CE</button>
+            <button type="button" class="btn btn-lg btn-info" id ="8">8</button>
+            <button type="button" class="btn btn-lg btn-info" id ="5">5</button>
+            <button type="button" class="btn btn-lg btn-info" id ="2">2</button>
 
           </p>
 
@@ -83,11 +91,11 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-primary">%</button>
-            <button type="button" class="btn btn-lg btn-info">9</button>
-            <button type="button" class="btn btn-lg btn-info">6</button>
-            <button type="button" class="btn btn-lg btn-info">3</button>
-            <button type="button" class="btn btn-lg btn-info">.</button>
+            <button type="button" class="btn btn-lg btn-primary" id ="div">/</button>
+            <button type="button" class="btn btn-lg btn-info" id ="9">9</button>
+            <button type="button" class="btn btn-lg btn-info" id ="6" >6</button>
+            <button type="button" class="btn btn-lg btn-info" id ="3">3</button>
+            <button type="button" class="btn btn-lg btn-info" id ="dot">.</button>
           </p>
 
         </div>
@@ -95,10 +103,10 @@
         <div class="col-xs-3">
 
           <p>
-            <button type="button" class="btn btn-lg btn-primary">X</button>
-            <button type="button" class="btn btn-lg btn-primary">-</button>
-            <button type="button" class="btn btn-lg btn-primary">+</button>
-            <button type="button" class="btn btn-lg btn-success long">=</button>
+            <button type="button" class="btn btn-lg btn-primary" id ="mul" >X</button>
+            <button type="button" class="btn btn-lg btn-primary" id ="sub">-</button>
+            <button type="button" class="btn btn-lg btn-primary" id ="add">+</button>
+            <button type="button" class="btn btn-lg btn-success long" id ="equ">=</button>
           </p>
 
         </div>
@@ -114,15 +122,5 @@
 
     </div> <!-- /container -->
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script src="../../assets/js/docs.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
