--- a/AdvancedFrontEndDevelipmentProjects/pomodoro.html
+++ b/AdvancedFrontEndDevelipmentProjects/pomodoro.html
@@ -52,12 +52,10 @@
 
       <div class="col-lg-offset-2 col-lg-4">
 
-        <div class="panel panel-default">
+        <div class="panel panel-default reset">
 
           <div class="panel-body text-center">
-            <p class="top-panel">Break Time</p>
-
-            <p class="top-panel"><span class="brake-">-</span> 5 <span class="brake+">+</span></p>
+            <p class="top-panel">Reset Timer</p>
           </div>
 
         </div>
@@ -69,7 +67,7 @@
           <div class="panel-body text-center">
             <p class="top-panel">Countdown Time</p>
 
-            <p class="top-panel"><span class="cd-">-</span> <span class="cd">2</span> <span class="cd+">+</span></p>
+            <p class="top-panel"><span class="cd-">-</span> <span class="cd">1</span> <span class="cd+">+</span></p>
           </div>
 
         </div>
@@ -83,6 +81,7 @@
           <div class="countdownarea">
             <p class="cdinfo">CountDown</p>
             <p class="countdown">0</p>
+            <p class="start">Start</p>
           </div>
 
       </div>
