added a countdown bar, css still needs work

--- a/AdvancedFrontEndDevelipmentProjects/pomodoro.html
+++ b/AdvancedFrontEndDevelipmentProjects/pomodoro.html
@@ -67,7 +67,7 @@
           <div class="panel-body text-center">
             <p class="top-panel">Countdown Time</p>
 
-            <p class="top-panel"><span class="cd-">-</span> <span class="cd">1</span> <span class="cd+">+</span></p>
+            <p class="top-panel"><span class="cd-">-</span> <span class="cd">25</span> <span class="cd+">+</span></p>
           </div>
 
         </div>
@@ -79,13 +79,22 @@
       <div class="col-lg-offset-5 col-lg-2">
 
           <div class="countdownarea">
-            <p class="cdinfo">CountDown</p>
+            <p class="cdinfo">Countdown</p>
             <p class="countdown">0</p>
             <p class="start">Start</p>
           </div>
 
       </div>
     </div>
+    <div class="row text-center">
+      <div class="col-lg-offset-5 col-lg-2">
+
+        <div class="progress">
+        <div class="progress-bar" style="width: 0%"></div>
+        </div>
+      </div>
+    </div>
+
 
 
   </div>
