finished the css, some minor changes to html and js

--- a/AdvancedFrontEndDevelipmentProjects/pomodoro.html
+++ b/AdvancedFrontEndDevelipmentProjects/pomodoro.html
@@ -52,42 +52,33 @@
 
       <div class="col-lg-offset-2 col-lg-4">
 
-        <div class="panel panel-default reset">
 
-          <div class="panel-body text-center">
-            <p class="top-panel">Reset Timer</p>
-          </div>
-
-        </div>
-      </div>
-
-      <div class="col-lg-4 ">
         <div class="panel panel-default">
 
           <div class="panel-body text-center">
-            <p class="top-panel">Countdown Time</p>
+            <p class="top-panel">Adjust Time</p>
 
-            <p class="top-panel"><span class="cd-">-</span> <span class="cd">25</span> <span class="cd+">+</span></p>
+            <p class="top-panel"><span class="cd- hand">-</span> <span class="cd">25</span> <span class="cd+ hand">+</span></p>
           </div>
 
         </div>
       </div>
 
-    </div>
 
-    <div class="row text-center">
-      <div class="col-lg-offset-5 col-lg-2">
+      <div class=" col-lg-4">
 
-          <div class="countdownarea">
+          <div class="panel panel-default countdownarea">
             <p class="cdinfo">Countdown</p>
             <p class="countdown">0</p>
             <p class="start">Start</p>
           </div>
 
       </div>
+
     </div>
+
     <div class="row text-center">
-      <div class="col-lg-offset-5 col-lg-2">
+      <div class="col-lg-offset-2 col-lg-8">
 
         <div class="progress">
         <div class="progress-bar" style="width: 0%"></div>
@@ -95,7 +86,13 @@
       </div>
     </div>
 
+    <div class="row text-center">
+      <div class="col-lg-offset-5 col-lg-2">
 
+        <a href="#" class="btn btn-default reset">Reset Timer</a>
+
+      </div>
+    </div>
 
   </div>
 
