--- a/AdvancedFrontEndDevelipmentProjects/pomodoro.html
+++ b/AdvancedFrontEndDevelipmentProjects/pomodoro.html
@@ -83,7 +83,7 @@
 
     </div>
 
-  </div> <!-- end of pomodoro class -->
+  </div> <!-- end of pomodoro div -->
 
   </div> <!-- Main jumbotron for a primary marketing message or call to action -->
 
