--- a/AdvancedFrontEndDevelipmentProjects/tictac.html
+++ b/AdvancedFrontEndDevelipmentProjects/tictac.html
@@ -34,50 +34,115 @@
 
   <body>
 
-  <div class="container" role="main">
+  <div class="container text-center" role="main">
 
-    <div class ="game text-center">
 
       <div class="row text-center">
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square topleft">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square topmid">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square topright">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
 
       <div class="row text-center">
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square midleft">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square mid">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square midright">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
 
       <div class="row text-center">
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square botleft">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-xs-4">
+
+
+
+        <div class="col-xs-4 responsive-square botmid">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                Kappa
+              </div>
+            </div>
+          </div>
         </div>
 
-        <div class="col-xs-4">
+        <div class="col-xs-4 responsive-square botright">
+          <div class="content">
+            <div class="table">
+              <div class="table-cell">
+                
+                0
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
 
-  </div> <!-- end of game div -->
 
   </div> <!-- Main jumbotron for a primary marketing message or call to action -->
 
