created checkWin and clear function for tictac, cleaned up pomodoro a bit

--- a/AdvancedFrontEndDevelipmentProjects/tictac.html
+++ b/AdvancedFrontEndDevelipmentProjects/tictac.html
@@ -34,36 +34,51 @@
 
   <body>
 
+
+    <div class="modal text-center" tabindex="1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+
+            <h3 class="modal-title">Tick Tack Toe</h3>
+          </div>
+          <div class="modal-body">
+            <p>Choose side!</p>
+            <p class><span class="X big-bold hoverhand">X</span>  or <span class="O big-bold hoverhand">O</span></p>
+          </div>
+          <div class="modal-footer">
+
+          </div>
+        </div>
+      </div>
+  </div>
+
   <div class="container text-center" role="main">
 
-
       <div class="row text-center">
 
-        <div class="col-xs-4 responsive-square topleft">
+        <div class="col-xs-4 responsive-square">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell topleft">
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-4 responsive-square topmid">
+        <div class="col-xs-4 responsive-square">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell topmid">
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-4 responsive-square topright">
+        <div class="col-xs-4 responsive-square">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell topright">
               </div>
             </div>
           </div>
@@ -73,31 +88,28 @@
 
       <div class="row text-center">
 
-        <div class="col-xs-4 responsive-square midleft">
+        <div class="col-xs-4 responsive-square ">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell midleft">
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-4 responsive-square mid">
+        <div class="col-xs-4 responsive-square">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell mid">
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-4 responsive-square midright">
+        <div class="col-xs-4 responsive-square">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell midright">
               </div>
             </div>
           </div>
@@ -107,35 +119,29 @@
 
       <div class="row text-center">
 
-        <div class="col-xs-4 responsive-square botleft">
+        <div class="col-xs-4 responsive-square">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell botleft">
               </div>
             </div>
           </div>
         </div>
 
 
-
-
-        <div class="col-xs-4 responsive-square botmid">
+        <div class="col-xs-4 responsive-square">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                Kappa
+              <div class="table-cell botmid">
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-xs-4 responsive-square botright">
+        <div class="col-xs-4 responsive-square ">
           <div class="content">
             <div class="table">
-              <div class="table-cell">
-                
-                0
+              <div class="table-cell botright">
               </div>
             </div>
           </div>
