--- a/AdvancedFrontEndDevelipmentProjects/simon.html
+++ b/AdvancedFrontEndDevelipmentProjects/simon.html
@@ -49,25 +49,25 @@
             <div class="back">
 
               <div class="pad shape1" id="1">
-                <audio preload="auto" class="sound1">
+                <audio preload="auto" id="sound1">
                   <source src="https://s3.amazonaws.com/freecodecamp/simonSound1.mp3" type="audio/mpeg"/>
                 </audio>
               </div>
 
               <div class="pad shape2" id="2">
-                <audio preload="auto" class="sound2">
+                <audio preload="auto" id="sound2">
                   <source src="https://s3.amazonaws.com/freecodecamp/simonSound2.mp3" type="audio/mpeg"/>
                 </audio>
               </div>
 
               <div class="pad shape3" id="3">
-                <audio preload="auto" class="sound3">
+                <audio preload="auto" id="sound3">
                   <source src="https://s3.amazonaws.com/freecodecamp/simonSound3.mp3" type="audio/mpeg"/>
                 </audio>
               </div>
 
               <div class="pad shape4" id="4">
-                <audio preload="auto" class="sound4">
+                <audio preload="auto" id="sound4">
                   <source src="https://s3.amazonaws.com/freecodecamp/simonSound4.mp3" type="audio/mpeg"/>
                 </audio>
               </div>
@@ -84,7 +84,7 @@
 
                 <button class="btn strickt" type="button">Strickt</button>
 
-                <input type="checkbox" data-toggle="toggle" data-onstyle="danger">
+                <input id="toggle-event" type="checkbox" data-toggle="toggle" data-onstyle="danger">
 
               </div>
 
